<resources>
    <string name="app_name">Pocus App</string>
    <string name="AboutTitle">About</string>
    <string name="TimersTitle">Timers</string>
    <!-- Tela ABOUT -->
    <string name="WhatIsPocus">O que é Pocus?</string>
    <string name="FocusImportance">Foco e sua importância</string>
    <string name="WhatIsPomodoro">O que é pomodoro?</string>
    <string name="txttalktodev">Tem alguma sugestão ou encontrou algum bug?</string>
    <string name="talktodev">Fale com um desenvolvedor</string>

    <!-- O que é POCUS -->
    <string name="VejaImportancia">Veja a importância do foco</string>
    <string name="OqPomodoro">O que é pomodoro</string>
    <string name="ComeceFoco">Comece a focar!</string>
    <string name="ExplicacaoPocus">Pocus App é um aplicativo que se baseia no método de gerenciamento
    de tempo "Pomodoro". \n \n \n \n

    A intenção desse aplicativo é, não só a utilização desse método, como a explicação da importância
    de se ter um método para gerenciar seu tempo.</string>

    <!-- IMPORTÂNCIA DO FOCO-->
    <string name="ExplicacaoFoco">
        O gerenciamento do tempo é importante para que as atividades do dia a dia sejam feitas
        de uma forma mais performática e, consequentemente, mais rápida e eficiente! \n \n \n \n

        Não se preocupe, iremos te ajudar com todo esse processo de foco! </string>
    <string name="linkfoco">Veja mais sobre técnicas de estudo</string>
    <string name="biblioteca">Veja bibliotecas próximas</string>

    <string name="OqueEPomodoro">
Pomodoro é uma técnica de concentração, estudo e gerenciamento de tempo, criada por Francesco Cirillo por volta de 1980.
\n \n \n \n


Com ela, você dá um tempinho de descanso para seu cérebro, de forma que você não fique totalemente perdido depois.</string>

    <!--    tela main/timer -->
    <string name="start">Começar</string>
    <string name="pausar">Pausar</string>
    <string name="breaktimer">Break</string>
    <string name="mudeseutimer">Mude seu timer</string>
    <string name="vejasobre">Veja sobre</string>

    <!--    tela permissão-->
    <string name="PorquePermitir">Por que permitir?
    </string>
    <string name="permission">Para utilizar este aplicativo, é necessário que a permissão de localização seja concedida. \n \n
    Para conceder a permissão, aperte no botão abaixo.
    </string>
    <string name="permissionbtn">Conceder permissão
    </string>

    <string name="sendEmail">Escolha o seu aplicativo de e-mail
    </string>
    <string name="registerTitle">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="passwordConfirm">Repeat your password</string>
    <string name="HaveAnAcc">Already have an account? Log in!</string>
    <string name="loginTitle">Login</string>
    <string name="DontHaveAnAcc">Don\'t have an account yet? Register!</string>
    <string name="rememberMe">Remember me</string>
    <string name="profile">Profile</string>
    <string name="profileUsername">Hello user, it\'s time to focus!</string>
    <string name="profilePassword">Don\'t forget, your password is \'…\'</string>
    <string name="Logout">Logout</string>
</resources>