<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCDCDC"
    android:backgroundTint="#053F5C"
    tools:context=".WhatIsPomodoroActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="386dp"
        android:layout_height="334dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="15dp"
        android:text="@string/ExplicacaoFoco"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGoFocus3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btnGoFocus3"
        android:layout_width="411dp"
        android:layout_height="97dp"
        android:backgroundTint="#FFFFFF"
        android:drawableTint="#FF00FF"
        android:paddingLeft="30dip"
        android:text="@string/ComeceFoco"
        android:textColor="#053F5C"
        app:cornerRadius="0dp"
        app:icon="@drawable/ic_next_arrow"
        app:iconGravity="textEnd"
        app:iconPadding="30dp"
        app:iconTint="#F27F0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="fill_parent"
        android:layout_height="191dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_template" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="fill_parent"
        android:layout_height="83dp"
        android:background="#FFF2F2"
        android:paddingVertical="22dp"
        android:text="@string/WhatIsPomodoro"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#053F5C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="60dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="goBack"
        app:icon="@drawable/ic_back_arrow"
        app:iconTint="#F27F0C"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

</androidx.constraintlayout.widget.ConstraintLayout>