<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#053F5C"
    tools:context=".ImportanceOfFocusActivity">

    <Button
        android:id="@+id/btnGoFocus2"
        android:layout_width="411dp"
        android:layout_height="97dp"
        android:layout_marginTop="11dp"
        android:backgroundTint="#FFFFFF"
        android:drawableTint="#FF00FF"
        android:onClick="chamarActivityWhatIsPomodoro"
        android:paddingLeft="30dip"
        android:text="@string/OqPomodoro"
        android:textColor="#053F5C"
        app:cornerRadius="0dp"
        app:icon="@drawable/ic_next_arrow"
        app:iconGravity="textEnd"
        app:iconPadding="20dp"
        app:iconTint="#F27F0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="386dp"
        android:layout_height="334dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="11dp"
        android:text="@string/ExplicacaoFoco"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnGoFocus2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="83dp"
        android:background="#FFF2F2"
        android:paddingVertical="22dp"
        android:text="@string/WhatIsPocus"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#053F5C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="191dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_template" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="60dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="132dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="goBack"
        app:icon="@drawable/ic_back_arrow"
        app:iconTint="#F27F0C"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>